--- a/src/app/sound/sound.component.html
+++ b/src/app/sound/sound.component.html
@@ -1,4 +1,5 @@
-<h2>Kut herrie</h2>
+<h1 class="appTitle">Kut herrie</h1>
+<app-prefix></app-prefix>
 <section class="sound-menu">
   <a *ngFor="let sound of sounds" (click)="copy(sound.name)" >
     {{ sound.name }}
