Added dvd bounce

--- a/src/app/sound/sound.component.css
+++ b/src/app/sound/sound.component.css
@@ -19,8 +19,8 @@
 }
 
 a {
-  background-color: #3f525c;
-  border-radius: 2px;
+  background-color: #578399;
+  border-radius: 6px;
   padding: 1rem;
   font-size: 1.2rem;
   text-decoration: none;
