--- a/src/app/sound/sound.component.html
+++ b/src/app/sound/sound.component.html
@@ -1,7 +1,10 @@
 <h1 class="appTitle">Kut herrie</h1>
 <app-prefix></app-prefix>
 <section class="sound-menu">
-  <a *ngFor="let sound of sounds" (click)="copy(sound.name)" >
+  <a
+    *ngFor="let sound of sounds"
+    (click)="copy(sound.name)"
+  >
     {{ sound.name }}
   </a>
 </section>
