--- a/src/app/sound/sound.component.css
+++ b/src/app/sound/sound.component.css
@@ -18,7 +18,7 @@
   align-items: flex-start;
 }
 
-a {
+.sound-button {
   background-color: #578399;
   border-radius: 6px;
   padding: 1rem;
@@ -39,13 +39,35 @@ a {
   align-self: auto;
 }
 
+
+.sound-button:hover {
+  background-color: #084040;
+}
+
+.sound-button-clicked{
+  background-color: #084040;
+  border-radius: 6px;
+  padding: 1rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+  display: inline-block;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  min-width: 70px;
+  margin: 0.5rem auto;
+  box-sizing: border-box;
+  cursor: pointer;
+  
+  /* flexbox */
+  order: 0;
+  flex: 0 1 auto;
+  align-self: auto;
+}
+
 @media (min-width: 600px) {
-  a {
+  .sound-button, .sound-button-clicked {
     width: 14%;
     box-sizing: content-box;
   }
-}
-
-a:hover {
-  background-color: #000;
 }
