--- a/src/app/sound/sound.component.html
+++ b/src/app/sound/sound.component.html
@@ -3,7 +3,8 @@
 <section class="sound-menu">
   <a
     *ngFor="let sound of sounds"
-    (click)="copy(sound.name)"
+    (click)="copyToClipboard(sound.name); sound.pressed = !sound.pressed"
+    [ngClass]="sound.pressed ? 'sound-button-clicked' : 'sound-button'"
   >
     {{ sound.name }}
   </a>
