--- a/front/src/app/components/add-sound/add-sound-dialog.html
+++ b/front/src/app/components/add-sound/add-sound-dialog.html
@@ -1,20 +1,22 @@
 <mat-dialog-content>
-  <input matInput placeholder="Ex. Pizza" value="Sushi">
-  <p>What's your favorite animal?</p>
-  <slider></slider>
-</mat-dialog-content>
-
-<form class="example-form">
   <mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
-    @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
-    <mat-error>Please enter a valid email address</mat-error>
-    }
-    @if (emailFormControl.hasError('required')) {
-    <mat-error>Email is <strong>required</strong></mat-error>
+    <mat-label>Link</mat-label>
+    <input type="url" matInput [(ngModel)]="url" [formControl]="linkFormControl" placeholder="Ex. youtube.com">
+    @if (linkFormControl.hasError('required')) {
+      <mat-error>Link is <strong>required</strong></mat-error>
     }
   </mat-form-field>
-</form>
+  <mat-form-field class="example-full-width">
+    <mat-label>Filename</mat-label>
+    <input type="text" matInput [(ngModel)]="fileName" [formControl]="linkFormControl" placeholder="Ex. erica.mp3">
+    @if (linkFormControl.hasError('required')) {
+      <mat-error>Filename is <strong>required</strong></mat-error>
+    }
+  </mat-form-field>
+  
+  <slider></slider><br>
+  <a mat-raised-button (click)="addSound()">Download</a>
+</mat-dialog-content>
+
 
 
