--- a/front/src/app/components/add-sound/add-sound.html
+++ b/front/src/app/components/add-sound/add-sound.html
@@ -1,1 +1,3 @@
-<mat-label (click)="openDialog()" style="margin-left: 10px; cursor: pointer">add sound</mat-label>
+<mat-label (click)="openDialog()" style="margin-left: 10px; cursor: pointer"
+  >add sound</mat-label
+>
